<?xml version="1.0"?>
    <package format="2">
    <name>dddynamic_reconfigure</name>
    <version>0.0.1</version>
    <description>The dddynamic_reconfigure package</description>

    <maintainer email="theNODO55@gmail.com">Noam Dori</maintainer>

    <license>Proprietary</license>

    <!-- <url type="website">http://wiki.ros.org/ddddynamic_reconfigure</url> -->

    <author email="theNODO55@gmail.com">Noam Dori</author>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>ddynamic_reconfigure</depend>

    <test_depend>rostest</test_depend>
</package>
